<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:rowCount="8">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passData2"
        android:id="@+id/textView2"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etInput"
        android:text="@string/defaultWordsForEditText"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="1" />

    <Button
        android:id="@+id/btnBindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bindService"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:textAlignment="gravity"
        android:layout_margin="2dp" />

    <Button
        android:id="@+id/btnUnbindService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unbindService"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|center_horizontal"
        android:textAlignment="gravity"
        android:layout_margin="2dp" />

    <Button
        android:id="@+id/btnSyncData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/syncData"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passData1"
        android:id="@+id/textView"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:textSize="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFromService"
        android:layout_gravity="center_horizontal"
        android:textColor="#f403d4"
        android:textSize="25dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopService"
        android:id="@+id/btnStopService"
        android:layout_row="7"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startService"
        android:id="@+id/btnStartService"
        android:layout_row="7"
        android:layout_column="1" />



</GridLayout>
